add some icons and service worker's script

--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,36 @@
 {
-    "name": "Just Dance",
-    "short_name": "Just Dance",
-    "start_url": "/",
-    "lang": "en-US",
-    "theme_color": "#d63384",
-    "display": "standalone",
-    "background_color": "#fff",
-    "orientation": "any",
-    "icons": [
-      {
-        "src": "img/carousel-1.jpg",
-        "sizes": "1920x1920",
-        "type": "image/jpg"
-      }
-    ]
-  }
+  "name": "Just Dance",
+  "short_name": "Just Dance",
+  "start_url": "/",
+  "lang": "en-US",
+  "theme_color": "#d63384",
+  "display": "standalone",
+  "orientation": "portrait",
+  "icons": [
+    {
+      "src": "icon_android1.png",
+      "sizes": "72x72",
+      "type": "image/png"
+    },
+    {
+      "src": "icon_android2.png",
+      "sizes": "48x48",
+      "type": "image/png"
+    },
+    {
+      "src": "icon_android3.png",
+      "sizes": "96x96",
+      "type": "image/png"
+    },
+    {
+      "src": "icon_android4.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "icon_android5.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    }
+  ]
+}
