--- a/manifest.json
+++ b/manifest.json
@@ -1,27 +1,14 @@
 {
   "name": "Just Dance",
   "short_name": "Just Dance",
-  "start_url": "/",
+  "start_url": "https://victoriapriscila28.github.io/StudioClasseA/",
   "lang": "en-US",
   "theme_color": "#d63384",
+  "background_color": "#fff",
   "display": "standalone",
   "orientation": "portrait",
   "icons": [
-    {
-      "src": "icon_android1.png",
-      "sizes": "72x72",
-      "type": "image/png"
-    },
-    {
-      "src": "icon_android2.png",
-      "sizes": "48x48",
-      "type": "image/png"
-    },
-    {
-      "src": "icon_android3.png",
-      "sizes": "96x96",
-      "type": "image/png"
-    },
+    
     {
       "src": "icon_android4.png",
       "sizes": "144x144",
@@ -31,6 +18,12 @@
       "src": "icon_android5.png",
       "sizes": "192x192",
       "type": "image/png"
+    },
+    {
+      "src": "512.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
+
   ]
 }
